--- a/config.json
+++ b/config.json
@@ -1,11 +1,21 @@
 {
-    "number_of_agents": 40,
-    "number_of_food_spots": 100,
+    "number_of_altruistic_agents": 20,
+    "number_of_egoistic_agents": 20,
     "agent_base_energy_level": 100,
     "moving_speed": 0.2,
     "food_detection_range": 50,
     "agent_detection_range": 100,
-    "food_nutritive_value": 1.0,
-    "food_max_supply": 50,
-    "time_before_food_respawn": 600
+    "energy_level_to_reproduce": 200,
+    "reproduction_cost": 50,
+    "allele_length": 10,
+    "mutation_probability": 0.1,
+
+    "number_of_food_spots": 20,
+    "food_nutritive_value": 0.4,
+    "food_max_supply": 1000,
+    "time_before_food_respawn": 1000,
+
+    "pheromone_radius": 100,
+    "pheromone_lifespan": 300,
+    "pheromone_energy_cost": 0.1
 }
