--- a/config.json
+++ b/config.json
@@ -1,21 +1,22 @@
 {
-    "number_of_altruistic_agents": 20,
-    "number_of_egoistic_agents": 20,
+    "number_of_altruistic_agents": 0,
+    "number_of_egoistic_agents": 0,
+    "number_of_random_agents": 20,
     "agent_base_energy_level": 150,
     "moving_speed": 0.4,
-    "food_detection_range": 25,
-    "agent_detection_range": 100,
+    "food_detection_range": 20,
+    "agent_detection_range": 300,
     "energy_level_to_reproduce": 200,
-    "reproduction_cost": 25,
+    "reproduction_cost": 50,
     "allele_length": 10,
-    "mutation_probability": 0.1,
+    "mutation_probability": 0.05,
 
-    "number_of_food_spots": 5,
-    "food_nutritive_value": 1.0,
-    "food_max_supply": 200,
+    "number_of_food_spots": 9,
+    "food_nutritive_value": 1,
+    "food_max_supply": 1000,
     "time_before_food_respawn": 500,
 
-    "pheromone_radius": 100,
+    "pheromone_radius": 150,
     "pheromone_lifespan": 1,
-    "pheromone_energy_cost": 0.3
+    "pheromone_energy_cost": 0.0
 }
